src/test/ui/issues/issue-13466.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:8:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this match expression has type `std::option::Option<{integer}>`
LL |         Ok(u) => u,
   |         ^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<{integer}>`
              found type `std::result::Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:14:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this match expression has type `std::option::Option<{integer}>`
...
LL |         Err(e) => panic!(e)
   |         ^^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<{integer}>`
              found type `std::result::Result<_, _>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
